dev/yaml/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
spec:
  type: NodePort  # <--- Esta es la palabra mágica
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
